2012-10-01 Zoltan Tuza <zoltuz@zoltuz-laptop>

	* txtl_plot.m: added regular expression handling capability for 
	Gene Expression and DNA and mRNA plots

2012-09-29  Richard Murray  <murray@altura.local>

	* negautoreg.m: got rid of junk DNA in this example; updated
	plotting to handle new RNAP70 format (starts at zero => normalize by
	max, not initial)

	* txtl_extract.m: tweaked the RNAP + Sigma70 reaction to prevent
	generation of very stiff differential equations

	* txtl_protein_deGFP.m: commented out degradation reactions.  These
	don't occur in TXTL unless ClpXP is present 

	* *.m: added TODOs

	* txtl_dna.m: added missing semicolon that was causing prepromspec
	to generate extraneous output.

	* negautoreg.m (configsetObj): ode23s is not supported in MATLAB
	2012a.  Commented out solver type; this example shoudl work with
	default solver.

	* *.m: Merged changes from Vipul and Zoltan's development branch

2012-09-12  Richard Murray  <murray@altura.local>

	* Pending: added some possible project ideas to Pending list.

2012-09-11  Richard Murray  <murray@altura.local>

	* induction.m: new function to demonstrate txtl_addspecies.

	* txtl_addspecies.m: new function to add a species to a tube.

2012-09-11  Richard Murray  <murray@altura.local>

	* txtl_dna.m: updated documentation.  Also summary information on
	Openwetware web site

	* txtl_dna.m: changed txtl_rbs_* to txtl_utr_

	* txtl_rbs_rbs.m: renamed to txtl_utr_rbs.m

	* negautoreg.m (mMperunit): added plots of RNAP and ribosome
	concentrations and normalized resource plot

2012-09-10  Richard Murray  <murray@altura.local>

	* txtl_buffer.m: Set concentration of NTP in buffer to match
	what we use in experiments.

	* negautoreg.m (mMperunit): updated plots to show resources in mM

2012-09-09  Richard Murray  <murray@altura.local>

	* txtl_rnap_rnap70.m: added in enzymatric reaction for transcription
	to rate limit the effect of NTP usage.  Parameters need to be updated.
